making changes to css, srcip and img src's

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Adam Csordas | Junior Front-End Developer</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="project/assets/css/main.css" />
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+		<link rel="stylesheet" href="project/assets/css/noscript.css" />
 	</noscript>
 </head>
 
@@ -64,7 +64,7 @@
 						spending time with my wife.
 						Also, I like making and editing videos, watching football, playing video games and listening to music.</p>
 				</header>
-				<img src="images/codingMan.jpeg" alt="Coding man" class="image main" /></a>
+				<img src="project/images/codingMan.jpeg" alt="Coding man" class="image main" /></a>
 				<ul class="actions special">
 					<li><a href="https://www.linkedin.com/in/adam-csordas-307097142/" target="_blank" class="button large">More
 							about me</a></li>
@@ -77,7 +77,7 @@
 					<header>
 						<h2><a href="http://nelaandadam.com/index.html" target="_blank">Wedding Website</a></h2>
 					</header>
-					<a href="http://nelaandadam.com/index.html" target="_blank" class="image fit"><img src="images/wedding.jpg"
+					<a href="http://nelaandadam.com/index.html" target="_blank" class="image fit"><img src="project/images/wedding.jpg"
 							alt="Wedding" /></a>
 					<p>This is the project, that I'm the most proud of. I have built the website from scratch for my wedding. The
 						techs, I have used were HTML, CSS and JavaScript. Also,
@@ -95,7 +95,7 @@
 					<header>
 						<h2><a href="https://github.com/AdamCsordas21/RSVP" target="_blank">RSVP App</a></h2>
 					</header>
-					<a href="https://github.com/AdamCsordas21/RSVP" target="_blank" class="image fit"><img src="images/RSVP.jpg" alt="RSVP App" /></a>
+					<a href="https://github.com/AdamCsordas21/RSVP" target="_blank" class="image fit"><img src="project/images/RSVP.jpg" alt="RSVP App" /></a>
 					<p>In this project, I have used React to build an app for keeping track of RSVP's. I learned how to break
 						(refactoring) the app into components and how
 						they should connect to each other. The app can keep track of the guest list, guests names, confirmed guests
@@ -110,7 +110,7 @@
 						<h2><a href="https://adamcsordas21.github.io/Full-Stack-Conf/" target="_blank">Full Stack Conf</a></h2>
 					</header>
 					<a href="https://adamcsordas21.github.io/Full-Stack-Conf/" target="_blank" class="image fit"><img
-							src="images/FullStackConf.jpg" alt="Full Stack Conf" /></a>
+							src="project/images/FullStackConf.jpg" alt="Full Stack Conf" /></a>
 					<p>In this project, I have learned about Bootstrap documentation, how Bootstrap solves common layout,
 						components and options for laying out a project,
 						including containers, the grid system and responsive utility classes. Custom styles for UI tasks like
@@ -126,7 +126,7 @@
 						<h2><a href="https://adamcsordas21.github.io/Budapest/" target="_blank">Budapest</a></h2>
 					</header>
 					<a href="https://adamcsordas21.github.io/Budapest/" target="_blank" class="image fit"><img
-							src="images/Budapest.jpg" alt="Budapest" /></a>
+							src="project/images/Budapest.jpg" alt="Budapest" /></a>
 					<p>In this project, I have learned the core concepts of CSS while styling the structure of a simple website.
 						Targeting HTML elements with basic selectors,
 						understanding values and units, box model and basic layout. Enhancing the design with CSS such as rounded
@@ -143,7 +143,7 @@
 								Challenge</a></h2>
 					</header>
 					<a href="https://adamcsordas21.github.io/Random-Colour-Challenge/" target="_blank" class="image fit"><img
-							src="images/RandomColour.jpg" alt="Random Colour Challenge" /></a>
+							src="project/images/RandomColour.jpg" alt="Random Colour Challenge" /></a>
 					<p>This little program prints out 100 random colours to the browser. The task was to improve the already
 						existing script. I have practiced refactoring the code
 						and learned hot to apply DRY programming principles to simplify this program using a loop.</p>
@@ -156,8 +156,8 @@
 					<header>
 						<h2><a href="https://adamcsordas21.github.io/JCole/" target="_blank">J. Cole - Wikipedia</a></h2>
 					</header>
-					<a href="https://adamcsordas21.github.io/JCole/" target="_blank" class="image fit"><img src="images/JCole.jpg"
-							alt="" /></a>
+					<a href="https://adamcsordas21.github.io/JCole/" target="_blank" class="image fit"><img src="project/images/JCole.jpg"
+							alt="J Cole" /></a>
 					<p>In this little project, the goal was to practice and learn how to use Bootstrap by building a tribute page.
 						The idea was to create a Wikipedia page of a chosen famous person. The page
 						had to include titles, image, text and links. The page also had to be nicely formatted.</p>
@@ -178,13 +178,13 @@
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="project/assets/js/jquery.min.js"></script>
+	<script src="project/assets/js/jquery.scrollex.min.js"></script>
+	<script src="project/assets/js/jquery.scrolly.min.js"></script>
+	<script src="project/assets/js/browser.min.js"></script>
+	<script src="project/assets/js/breakpoints.min.js"></script>
+	<script src="project/assets/js/util.js"></script>
+	<script src="project/assets/js/main.js"></script>
 </body>
 
 </html>
