correcting some misspelling

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						techs, I have used were HTML, CSS and JavaScript. Also,
 						for the back end, I have got helped out with PHP for the RSVP page. The website has a story about us,
 						information for the guests and an RSVP page that also
-						includes a dietry requests page. I have really enjoyed working on this project, it felt like a real
+						includes a dietary requests page. I have really enjoyed working on this project, it felt like a real
 						production.
 					</p>
 					<ul class="actions special">
@@ -145,8 +145,8 @@
 					<a href="https://adamcsordas21.github.io/Random-Colour-Challenge/" target="_blank" class="image fit"><img
 							src="project/images/RandomColour.jpg" alt="Random Colour Challenge" /></a>
 					<p>This little program prints out 100 random colours to the browser. The task was to improve the already
-						existing script. I have practiced refactoring the code
-						and learned hot to apply DRY programming principles to simplify this program using a loop.</p>
+						existing script. I have practised refactoring the code
+						and learned how to apply DRY programming principles to simplify this program using a loop.</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/AdamCsordas21/Random-Colour-Challenge" target="_blank" class="button">Source
 								code</a></li>
