--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li class="active"><a href="https://drive.google.com/file/d/13CW5osIlvdrIWATO33QUfUdc2clhAo1g/view?usp=sharing"
+				<li class="active"><a href="https://drive.google.com/file/d/13CW5osIlvdrIWATO33QUfUdc2clhAo1g/view"
 						target="_blank">| Resume |</a></li>
 			</ul>
 			<ul class="icons">
