removing RSVP App and adding Scoreboard App

--- a/index.html
+++ b/index.html
@@ -93,16 +93,14 @@
 				</article>
 				<article>
 					<header>
-						<h2><a href="https://github.com/AdamCsordas21/RSVP" target="_blank">RSVP App</a></h2>
+						<h2><a href="https://adamcsordas21.github.io/scoreboard/" target="_blank">Scoreboard</a></h2>
 					</header>
-					<a href="https://github.com/AdamCsordas21/RSVP" target="_blank" class="image fit"><img src="project/images/RSVP.jpg" alt="RSVP App" /></a>
-					<p>In this project, I have used React to build an app for keeping track of RSVP's. I learned how to break
-						(refactoring) the app into components and how
-						they should connect to each other. The app can keep track of the guest list, guests names, confirmed guests
-						and the pending guests.
-						The app also has a counter that keeps track of the attending, unconfirmed and total number of guests.</p>
+					<a href="https://adamcsordas21.github.io/scoreboard/" target="_blank" class="image fit"><img src="project/images/scoreboard.jpg" alt="Scoreboard" /></a>
+					<p>In this project, I have used React to build a Scoreboard App. I have practised how to separate components into modules. Learned to restructure state 
+						and data flow, to use conditional rendering to update UI based on the current state. Learned to use design patterns that prevent from writing messy 
+						and over-complicated code and help to create flexible, more performant components that are easier to understand and maintain.</p>
 					<ul class="actions special">
-						<li><a href="https://github.com/AdamCsordas21/RSVP" target="_blank" class="button">Source code</a></li>
+						<li><a href="https://github.com/AdamCsordas21/scoreboard" target="_blank" class="button">Source code</a></li>
 					</ul>
 				</article>
 				<article>
